JDK17 Forenklet eksempelkonfigurasjon
Fjernet matrikkel-spesifik konfigurasjon fra dokumentert eksempel.

TH-1911, TH-1986